--- a/templates/catalog/category/_grid.html.twig
+++ b/templates/catalog/category/_grid.html.twig
@@ -1,6 +1,6 @@
 {# Сетка товаров: ожидает переменные `products`, `total`, `page`, `limit`, `slug` #}
 <div class="bg-white">
-  <div class="mx-auto max-w-2xl lg:max-w-7xl">
+  <div class="mx-auto">
     {% if gridTitle is defined %}
       <h2 class="text-2xl font-bold tracking-tight text-gray-900">{{ gridTitle }}</h2>
     {% endif %}
@@ -40,7 +40,7 @@
           {% set imageUrls = imageUrls|merge([imgUrl]) %}
         {% endfor %}
 
-        <div class="group relative px-2 pt-4 pb-3 category-shadow border-b border-t border-gray-200" data-controller="product-gallery" data-product-gallery-images-value="{{ imageUrls|json_encode|e('html_attr') }}">
+        <div class="group relative px-2 pt-4 pb-3 category-shadow border-b border-t border-gray-200{% if isInSlider is defined and isInSlider %} border-l border-r{% endif %}" data-controller="product-gallery" data-product-gallery-images-value="{{ imageUrls|json_encode|e('html_attr') }}">
           <div class="group/image relative">
             {% if p.image|length > 0 %}
               {% set firstImage = sortedImages|first %}
