--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -2,10 +2,10 @@
 {% extends 'catalog/base.html.twig' %}
 
 {% block catalog_body %}
-  <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+  <div class="container mx-auto  px-4 py-16 sm:px-6 sm:py-24  lg:px-8">
     {% set gridTitle = 'Хиты продаж' %}
     <div data-module="product-slider">
-      {% include 'catalog/category/_grid.html.twig' with { products: products, gridTitle: gridTitle } %}
+      {% include 'catalog/category/_grid.html.twig' with { products: products, gridTitle: gridTitle, isInSlider: true } %}
     </div>
   </div>
 {% endblock %}
