--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -4,47 +4,7 @@
 {% block catalog_body %}
   <div class="container mx-auto  px-4 py-16 sm:px-6 sm:py-24  lg:px-8">
     {% set gridTitle = 'Хиты продаж' %}
-    <div data-module="product-slider" class="relative min-h-[320px] max-h-[420px] overflow-hidden">
-      {# Skeleton-прелоадер: имитируем количество карточек в слайдере (1 / 2 / 5), поверх контента #}
-      <div
-        data-product-slider-skeleton
-        class="pointer-events-auto absolute inset-0 z-10 grid grid-cols-1 gap-4 sm:grid-cols-2 xl:grid-cols-5 transition-opacity duration-300"
-      >
-        {% for i in 1..5 %}
-          <div class="skeleton skeleton-animated rounded-lg bg-base-100/80 p-4 sm:p-6">
-            <div class="h-40 w-full rounded-md bg-base-200 sm:h-48"></div>
-            <div class="mt-3 space-y-2">
-              <div class="h-4 w-3/4 rounded-full bg-base-200"></div>
-              <div class="h-4 w-2/3 rounded-full bg-base-200"></div>
-            </div>
-            <div class="mt-4 space-y-2">
-              <div class="h-4 w-full rounded-full bg-base-200"></div>
-              <div class="h-4 w-5/6 rounded-full bg-base-200"></div>
-            </div>
-            <div class="mt-4 h-10 w-full rounded-lg bg-base-200"></div>
-          </div>
-        {% endfor %}
-      </div>
-
-      {# Основной контент слайдера, скрыт до инициализации JS-модуля #}
-      <div
-        data-product-slider-content
-        class="opacity-0 pointer-events-none transition-opacity duration-300 ease-out"
-      >
-        {% include 'catalog/category/_grid.html.twig' with { products: products, gridTitle: gridTitle, isInSlider: true } %}
-        <!-- Navigation buttons -->
-        <div class="swiper-button-prev" aria-label="Предыдущий слайд">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
-          </svg>
-        </div>
-        <div class="swiper-button-next" aria-label="Следующий слайд">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
-          </svg>
-        </div>
-      </div>
-    </div>
+    {% include 'components/product-slider.html.twig' with { products: products, gridTitle: gridTitle } %}
   </div>
 {% endblock %}
 
