--- a/templates/catalog/product/show.html.twig
+++ b/templates/catalog/product/show.html.twig
@@ -461,12 +461,16 @@
       </div>
     </div>
   {% endif %}
-  
-  
-
-
-
-
+  {% if relatedProducts is defined and relatedProducts|length > 0 %}
+    <div class="bg-white">
+      <div class="container mx-auto py-12">
+        {% include 'components/product-slider.html.twig' with {
+          products: relatedProducts,
+          gridTitle: 'Похожие товары'
+        } %}
+      </div>
+    </div>
+  {% endif %}
 {% endblock %}
 
 
